# video-editor

./: .clangd  .gitignore  .qmllint.ini  .qmlls.ini  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  color_replace.py  download_lua_system.ps1  fix.py  git_log.txt  install_missing_sdks.ps1  method.md  ruler.md  temp.h  test.cpp  test_compact.cpp  test_effect.lua
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
core/: main.cpp
core/editor/: EditorBackendController.cpp  EditorBackendController.h
core/project/: ProjectManager.cpp
core/rendering/: RenderEngine.cpp  RenderEngine.h  VideoRenderer.cpp
core/setting/: SettingsController.cpp  (+1 more)
tests/: ProgramMonitorProbe.cpp  TimelineProbe.cpp
ui/: Main.qml  Theme.qml
video_studio/: .gitignore  CMakeLists.txt  README.md  convert_pillow.py  convert_webp.py  fix.py  generate_actions.py  inspect_onnx.py  logs_search.txt  qrc_dump.txt  recover.py  refactor.py  rename_webp.py
video_studio/build_test/: CMakeCache.txt
video_studio/core/: main.cpp
video_studio/core/actions/: ActionManager.cpp  ClipActions.cpp  EditActions.cpp  FileActions.cpp  HelpActions.cpp  MenuManager.cpp  SequenceActions.cpp  ToolActions.cpp  ViewActions.cpp
video_studio/core/actions/handlers/: ClipActions.cpp  ClipActions.h  HelpActions.h  SequenceActions.h  ViewActions.cpp
video_studio/core/actions/managers/: ActionManager.h
video_studio/core/effects/: EffectController.cpp  EffectController.h  EffectData.h  EffectProcessor.cpp  EffectProcessor.h
video_studio/core/effects/controllers/: EffectController.cpp  EffectController.h
video_studio/core/effects/models/: AudioEffect.h  BlurEffect.h  ColorEffect.cpp  ColorEffect.h  EffectData.h  StylizeEffect.cpp  StylizeEffect.h  TransformEffect.h
video_studio/core/effects/processors/: EffectProcessor.cpp  EffectProcessor.h
video_studio/core/export/: AdvancedSubtitleRenderer.cpp  AmdEncoder.cpp  AmdEncoder.h  HardwareDetector.cpp  HardwareDetector.h  HardwareEncoder.h  IntelEncoder.cpp  IntelEncoder.h  NvidiaEncoder.cpp  NvidiaEncoder.h  VideoExporter.cpp  VideoExporter.h
video_studio/core/export/encoders/: HardwareDetector.h  NvidiaEncoder.cpp  NvidiaEncoder.h
video_studio/core/export/exporters/: VideoExporter.cpp
video_studio/core/export/renderers/: AdvancedSubtitleRenderer.h
video_studio/core/media/: AudioWaveformProvider.cpp  MediaItem.cpp  MediaItem.h  MediaListModel.cpp  MediaListModel.h  MediaManager.cpp
video_studio/core/media/managers/: MediaManager.h
video_studio/core/media/models/: MediaItem.cpp
video_studio/core/media/providers/: AudioWaveformProvider.cpp
video_studio/core/playback/: AudioEngine.cpp  PlaybackEngine.cpp  PlaybackEngine.h
video_studio/core/playback/engines/: AudioEngine.cpp  PlaybackEngine.cpp  PlaybackEngine.h
video_studio/core/project/: ProjectManager.cpp  ProjectManager.h
video_studio/core/rendering/: VideoRenderer.h
video_studio/core/subtitle/: SrtParser.cpp  SrtParser.h  SubtitleController.cpp  SubtitleController.h
video_studio/core/timeline/: Clip.cpp  Clip.h  TimelineClipModel.cpp  TimelineClipModel.h  TimelineManager.cpp  Track.cpp
video_studio/core/timeline/commands/: TimelineCommands.cpp  TimelineCommands.h
video_studio/core/timeline/controllers/: TimelineAutoEditor.h
video_studio/core/timeline/managers/: TimelineManager.h
video_studio/core/timeline/models/: Clip.cpp  TimelineClipModel.cpp  TimelineClipModel.h  Track.cpp
video_studio/core/utils/: MediaImageProvider.cpp
video_studio/core/vocal/: AIVoiceGenerator.cpp  AIVoiceGenerator.h  VocalIsolator.cpp  edge_tts_runner.py  uvr_runner.py
video_studio/core/vocal/engine/ai/: AiVocalModel.h
video_studio/core/vocal/engine/dsp/: Fft.h
video_studio/core/vocal/engine/io/: MediaAudioDecoder.cpp  MediaAudioDecoder.h  WavProcessor.cpp  WavProcessor.h
video_studio/directml/: .signature.p7s  Microsoft.AI.DirectML.nuspec
video_studio/directml/_rels/: .rels
video_studio/onnxruntime_directml/: .signature.p7s  Microsoft.ML.OnnxRuntime.DirectML.nuspec
video_studio/onnxruntime_directml/_rels/: .rels
video_studio/tests/: ExportProbe.cpp  MediaItemProbe.cpp  PlaybackProbe.cpp  TimelineProbe.cpp  TimelineQmlProbe.cpp
video_studio/tests/qml_probe_imports/VideoStudioUI/: qmldir
video_studio/ui/: Main.qml  RoundedPlaceholder.qml  Theme.qml
video_studio/ui/header/: AppMenuItem.qml  ExportDialog.qml  HeaderMenu.qml
video_studio/ui/header/dialogs/: EmptyTimelineDialog.qml  ExportDialog.qml
video_studio/ui/header/menus/: AppMenu.qml  HeaderMenu.qml
video_studio/ui/header/utils/: ExportUtils.js
video_studio/ui/inspector/: AccordionHeader.qml  AudioTab.qml  BasicTab.qml  BlurTab.qml  ColorTab.qml  Inspector.qml  InspectorController.cpp  NeonEqualizer.qml  StylizeTab.qml
video_studio/ui/inspector/components/: AccordionHeader.qml  ColorWheel.qml  EffectSlider.qml
video_studio/ui/inspector/tabs/: AudioTab.qml  BasicTab.qml  BlurTab.qml  ChromaTab.qml  ColorTab.qml  StylizeTab.qml
video_studio/ui/main_setting/: MainSettings.qml
video_studio/ui/main_setting/components/: SettingsColorRow.qml  SettingsComboBoxRow.qml  SettingsRow.qml  SettingsToggleRow.qml  SidebarItem.qml
video_studio/ui/media_pool/: EffectHub.qml  MediaPool.qml  MediaPoolController.cpp  MediaPoolController.h  MediaPoolFooter.qml
video_studio/ui/monitors/: ProgramMonitor.qml
video_studio/ui/monitors/overlays/: LiveSubtitleOverlay.qml
video_studio/ui/settings/: TimelineSettingsMenu.qml
video_studio/ui/timeline_view/: ClipTrimController.cpp  ClipTrimController.h  TimelineCanvas.qml  TimelineClipItem.qml  TimelineController.cpp  TimelineController.h  TimelineTrackHeaders.qml  TimelineTracks.qml  TimelineView.qml
video_studio/ui/timeline_view/components/: AudioMeter.qml  TimelineCanvas.qml  TimelineClipItem.qml  TimelineHeader.qml  TimelineRuler.qml  TimelineTrackControl.qml  TimelineTrackHeaders.qml
video_studio/ui/timeline_view/controllers/: ClipTrimController.cpp  TimelineController.cpp  TimelineController.h
(+198 files in other folders)
